# cpp_self_register

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  self_register.cpp  self_register.hpp
tests/: CMakeLists.txt  aclass.hpp  self_register_test.cpp  sr_test_1.cpp  sr_test_1.hpp  sr_test_2.cpp  sr_test_2.hpp
